--- a/HR_PresentationLayer/HR_PresentationLayer.csproj
+++ b/HR_PresentationLayer/HR_PresentationLayer.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
@@ -20,7 +20,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\HR_BusinessLayer\HR_BusinessLayer.csproj" />
-    <ProjectReference Include="..\HR_DataAccessLayer\HR_DataAccessLayer.csproj" />
   </ItemGroup>
 
 </Project>
