--- a/HR_PresentationLayer/Properties/launchSettings.json
+++ b/HR_PresentationLayer/Properties/launchSettings.json
@@ -5,20 +5,20 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
+      "launchUrl": "swagger",
       "applicationUrl": "http://localhost:5187",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development",
-        "launchUrl": "swagger"
+        "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
     "https": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
+      "launchUrl": "swagger",
       "applicationUrl": "https://localhost:7009;http://localhost:5187",
       "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development",
-        "launchUrl": "swagger"
+        "ASPNETCORE_ENVIRONMENT": "Development"
       }
     }
   }
